Home screen added. Tabs added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">News Articles</string>
+    <string name="news_articles">News Articles</string>
+    <string name="favorites">Favorites</string>
 </resources>
