--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">News Articles</string>
+    <string name="app_name">News</string>
     <string name="news_articles">News Articles</string>
     <string name="favorites">Favorites</string>
     <string name="something_went_wrong_please_try_again">Something went wrong. Please try again.</string>
